New portfolio updates

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Tori Scalzo, Dev for Hire</title>
+    <title>Tori Scalzo, Software Engineer</title>
     <link rel="icon"
       type="image/png"
       href="http://www.freeiconspng.com/uploads/apple-computer-laptop-mac-monitor-screen-icon--icon-search--16.png">
@@ -76,7 +76,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Tori Scalzo</h1>
                 <hr>
-                <p>Dev for Hire, Full Stack Web Developer, Ruby on Rails Specialist, Freelancer</p>
+                <p>Software Engineering Manager | Senior Software Engineer | Finance Technology Specialist/p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -86,9 +86,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Full Stack Developer</h2>
+                    <h2 class="section-heading">Software Engineer</h2>
                     <hr class="light">
-                    <p class="text-faded">Tori Scalzo has the skills to take your website from conception to deployment in no time! Pick a previous project concept or make one of your own! Tori will work with you to figure out what's best for you and your app!</p>
+                    <p class="text-faded">As a software engineering manager at Wayfair for over a year, I led a team of engineers who developed and maintained finance technology platforms and tools. I have more than seven years of experience in software engineering, with a focus on finance core systems, strategic initiatives, and integrations. </p>
+                    <p class="text-faded">My core competencies include systems design, product service, and problem solving. I am passionate about creating a collaborative and inclusive work environment where everyone's ideas are valued and encouraged. I also enjoy mentoring and coaching my team members, as well as learning from them. My mission is to build better software and products that have a positive impact on people's lives.</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
             </div>
