--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Tori Scalzo</h1>
                 <hr>
-                <p>Software Engineering Manager | Senior Software Engineer | Finance Technology Specialist/p>
+                <p>Software Engineering Manager | Senior Software Engineer | Finance Technology Specialist</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
